tests/break/invalid/semantic/BreakNotInLoop3.wacc
# break is not used inside a loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
  done ;
  break
end
